June Full Updates
Commit all changes made before June..